reverse a user-specified string

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       <input id="txtNum1" type="number" value="99"/>
       <label for="txtNum2">Num 2:</label>
       <input id="txtNum2" type="number" value="1"/>
+      <label for="txtReverseString">Reverse This:</label>
+      <input id="txtReverseString" type="text" value="Hello World!"/>
     </p>
     <p id="pOut" style="font-family: 'Lucida Console', monospace"></p>
 
