Clear button added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <p>
       <button id="btnRun">Run</button>
+      <button id="btnClear">Clear</button>
       <label for="txtNum1">Num 1:</label>
       <input id="txtNum1" type="number" value="99"/>
       <label for="txtNum2">Num 2:</label>
@@ -9,7 +10,8 @@
       <label for="txtReverseString">Reverse This:</label>
       <input id="txtReverseString" type="text" value="Hello World!"/>
     </p>
-    <p id="pOut" style="font-family: 'Lucida Console', monospace"></p>
+    <p id="pPreamble" style="font-family: 'Lucida Console', monospace"></p>
+    <p id="pLogs" style="font-family: 'Lucida Console', monospace"></p>
 
     <script src="index.js"></script>
   </body>
