Filter and generate index.html just like index.js

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,11 @@
       <label for="txtReverseString">Reverse This:</label>
       <input id="txtReverseString" type="text" value="Hello World!"/>
     </p>
-    <p id="pPreamble" style="font-family: 'Lucida Console', monospace"></p>
+    <p>
+      wasmdemo compiled REPLACE_WITH_DATE<br/>
+      wasmdemo size (in bytes): REPLACE_WITH_SIZE<br/>
+    </p>
+
     <p id="pLogs" style="font-family: 'Lucida Console', monospace"></p>
 
     <script src="index.js"></script>
