index.html: show raw and base64 bytes on different lines

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,8 @@
     </p>
     <p>
       wasmdemo compiled REPLACE_WITH_DATE<br/>
-      wasmdemo size (in bytes): REPLACE_WITH_SIZE<br/>
+      wasm size (in bytes): REPLACE_WITH_SIZE_RAW<br/>
+      wasm base64 size (in bytes): REPLACE_WITH_SIZE_BASE64<br/>
     </p>
 
     <p id="pLogs" style="font-family: 'Lucida Console', monospace"></p>
