Implement md5 hash in wasm

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,8 @@
       <input id="txtNum2" type="number" value="1"/>
       <label for="txtReverseString">Reverse This:</label>
       <input id="txtReverseString" type="text" value="Hello World!"/>
+      <label for="txtHashString">Hash This:</label>
+      <input id="txtHashString" type="text" value="Hello World!"/>
     </p>
     <p>
       wasmdemo compiled REPLACE_WITH_DATE<br/>
