add md5 hashing

--- a/demo-website/index.html
+++ b/demo-website/index.html
@@ -21,9 +21,9 @@ limitations under the License.
       <button id="btnClearLogs">Clear Logs</button>
     </p>
     <p>
-      <label for="txtHashString">Hash This:</label>
-      <input id="txtHashString" type="text" value="abc" />
-      <button id="btnHashString">Test MD5 hashing</button>
+      <label for="txtHashString">Hash random string: </label>
+      <input id="txtHashString" type="number" min="0" /> times
+      <button id="btnHashString">MD5 hash</button>
     </p>
 
     <p id="logPara" style="font-family: 'Lucida Console', monospace"></p>
