--- a/demo-website/index.html
+++ b/demo-website/index.html
@@ -14,16 +14,23 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="index.css">
+  </head>
   <body>
     <p>
-      <button id="btnRunTestJS">Run Test with JS BloomFilter</button>
-      <button id="btnRunTestWasm">Run Test with WASM BloomFilter</button>
-      <button id="btnClearLogs">Clear Logs</button>
+      <button id="btnRunTestJS" class="button">
+        Run Test with JS BloomFilter
+      </button>
+      <button id="btnRunTestWasm" class="button">
+        Run Test with WASM BloomFilter
+      </button>
+      <button id="btnClearLogs" class="button">Clear Logs</button>
     </p>
     <p>
       <label for="txtHashString">Hash random string: </label>
       <input id="txtHashString" type="number" min="0" /> times
-      <button id="btnHashString">MD5 hash</button>
+      <button id="btnHashString" class="button">MD5 hash</button>
     </p>
 
     <p id="logPara" style="font-family: 'Lucida Console', monospace"></p>
