--- a/demo-website/index.html
+++ b/demo-website/index.html
@@ -15,7 +15,7 @@ limitations under the License.
 -->
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <p>
