Hash Test WASM button added to web ui

--- a/www/index.html
+++ b/www/index.html
@@ -3,10 +3,11 @@
     <p>
       <button id="btnRun">Run</button>
       <button id="btnClear">Clear</button>
-      <label for="txtNum1">Num 1:</label>
-      <input id="txtNum1" type="number" value="99"/>
+      <button id="btnHashTestWasm">Hash Test WASM</button>
+      <label for="txtNum1">Num 1 / Hash Count:</label>
+      <input id="txtNum1" type="number" value="5000"/>
       <label for="txtNum2">Num 2:</label>
-      <input id="txtNum2" type="number" value="1"/>
+      <input id="txtNum2" type="number" value="42"/>
       <label for="txtReverseString">Reverse This:</label>
       <input id="txtReverseString" type="text" value="Hello World!"/>
       <label for="txtHashString">Hash This:</label>
