generate index.mjs so that it is importable into a node application

--- a/www/index.html
+++ b/www/index.html
@@ -22,5 +22,8 @@
     <p id="pLogs" style="font-family: 'Lucida Console', monospace"></p>
 
     <script src="index.js"></script>
+    <script>
+      initializeWasmDemoUI();
+    </script>
   </body>
 </html>
